@@ -29,6 +29,6 @@ public abstract class MTE_PS_ChallengeNode extends MTE_ChallengeNode {
 
     // Creates the graph portion of the view.
     @Override protected MTE_GraphNode createGraphNode( MTE_Challenge challenge ) {
-        return new MTE_PS_GraphNode( challenge );
+        return new MTE_GraphNode( challenge );
     }
 }
