@@ -1,29 +1,0 @@
-// Copyright 2002-2012, University of Colorado
-package edu.colorado.phet.linegraphing.linegame.view.maketheequation;
-
-import edu.colorado.phet.common.phetcommon.view.graphics.transforms.ModelViewTransform;
-import edu.colorado.phet.linegraphing.common.model.Graph;
-import edu.colorado.phet.linegraphing.common.model.Line;
-import edu.colorado.phet.linegraphing.common.view.LineNode;
-import edu.colorado.phet.linegraphing.linegame.model.MTE_Challenge;
-import edu.colorado.phet.linegraphing.slopeintercept.view.SlopeInterceptLineNode;
-
-/**
- * Graph for all "Make the Equation" (MTE) challenges that use slope-intercept (SI) form.
- *
- * @author Chris Malley (cmalley@pixelzoom.com)
- */
-public class MTE_SI_GraphNode extends MTE_GraphNode {
-
-    public MTE_SI_GraphNode( MTE_Challenge challenge ) {
-        super( challenge );
-    }
-
-    @Override protected LineNode createAnswerLineNode( Line line, Graph graph, ModelViewTransform mvt ) {
-        return new SlopeInterceptLineNode( line, graph, mvt );
-    }
-
-    @Override protected LineNode createGuessLineNode( Line line, Graph graph, ModelViewTransform mvt ) {
-        return new SlopeInterceptLineNode( line, graph, mvt );
-    }
-}
