@@ -1,4 +1,5 @@
-12/22/12 use PointSlopeLineNode throughout GTE challenges, because we don't show the equation on graphed lines
+12/22/12 use PointSlopeLineNode throughout MTE challenges, because we don't show the equation on graphed lines
+12/22/12 use PointSlopeLineNode throughout GTL challenges, because we don't show the equation on graphed lines
 12/22/12 simplify GTL_GraphNode interface, don't need separate methods for creating answer and guess line nodes
 12/22/12 fix RewardNode.setLevel so that we have a perfect-score reward for all levels
 12/22/12 consolidate all game-model elements in one package
